[package]
name = "static-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"

serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

nix = { version = "0.27.1", features = [
    "mount",
    "hostname",
    "signal",
    "reboot",
] }
signal-hook = "0.3.17"
